# django-recruitment-task

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  ruff.toml
app/: settings.py  urls.py  views.py
docker/: init.sql
users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
